--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="3">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <title>Page Not Found</title>
+    <link rel="icon" href="IMG/times-circle-regular.svg">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Space+Mono&family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
-   
+  	<div class="container">
+  		<header class="header">
+  			<h1>404 Not Found</h1>
+  		</header>
+  		<section class="main">
+  			<div class="img-container">
+          <img src="IMG/scarecrow.png">
+  			</div>
+  			<div class="text">
+  				<h1>I have bad news<br>
+  				for you</h1>
+  				<p>The page your looking<br>
+  				for might be removed or is<br>
+  				temporarily unavailable.</p>
+  				<button>Back to homepage</button>
+  			</div>
+  		</section>
+  		<footer class="footer">
+  			<p>Abraham Duarte @ <a href="https://www.devchallenges.io" target="_blank">DevChallenges.io</a></p>
+  		</footer>
+  	</div>
   </body>
 </html>
